<resources>
    <string name="app_name">sharehelmet</string>

    <string name="service_terms_title">서비스 약관 대한민국</string>
    <string name="service_terms_date">기준 2024년 08월 07일</string>
    <string name="service_terms_text">
        본 이용약관을 주의 깊게 읽어 주십시오. 별첨을 포함한 본 이용약관(이하 "본 약관")은 이용자(아래 정의됨)가
        대한민국에서 당사(아래 정의됨)가 제공하는 앱, 사이트 및/또는 서비스에 접속하고 이를 이용하는 것을 규율합니다.
        앱, 사이트 및/또는 서비스에 접속하거나 이를 이용함으로써, 귀하는 본 약관에 구속되는 것에 동의하는 것입니다.
        본 약관에 동의하지 않는 경우, 앱, 사이트 또는 서비스에 대한 접속 및/또는 이용을 중단해 주시기 바랍니다.\n\n
        나아가 이용자는 이용자가 앱에 등록한 국가와 다른 국가(이하 "대체국가") 내에서 이루어지는 앱, 사이트 및/또는
        서비스 이용에 해당 대체국가에서 우선적으로 적용되는 약관(이하 "대체약관")이 적용된다는 것에 동의합니다.
        대체약관은 https://www.savethettuk.com 에서 확인하실 수 있습니다.\n\n
        미성년자의 법정대리인이 계약 체결에 동의하지 않은 경우, 미성년자 본인 또는 법정대리인은 계약을 취소할 수
        있습니다.\n\n
        이용자가 만 19세 미만인 경우: 이용자는 부모 또는 법정대리인으로부터, 부모 또는 법정대리인이 본 약관을
        승낙하고 다음에 대한 책임을 부담한다는 것에 합의한다는 동의를 얻어야 합니다: (i) 이용자의 행위,
        (ii) 서비스 이용과 관련하여 발생할 수 있는 모든 요금 및 (iii) 이용자의 본 약관 승낙 및 준수.
        부모 또는 법정대리인의 동의를 얻지 못한 경우, 이용자는 앱, 사이트 또는 서비스 접속 및/또는 이용을
        중단해야 합니다.
    </string>
    <string name="service_terms_section_title">1. 정의 및 해석</string>
    <string name="service_terms_section_text">
        1.1 달리 정의되지 않은 경우, 본 약관에는 약관 해석과 관련된 정의규정 및 조항을 명시한 별첨1이 적용됩니다.
    </string>

    <string name="service_terms_section_2_title">2. 앱, 사이트 및 서비스에 대한 접근 및 이용</string>
    <string name="service_terms_section_2_text">
        2.1 세이브더뚝 및 이용자는 본 약관의 유일한 당사자입니다.\n\n
        2.2 보안 자격 증명 : 앱, 사이트 및 서비스 내 암호로 보호되는 영역 및/또는 보안 영역은 이용자가 이용자의
        보안 자격 증명을 이용하는 경우에 한하여 접근이 가능합니다. 보안 자격 증명은 (i) 당사가 정하여 이용자에게
        발급한 것이 될 수도 있고, (ii) 이용자가 제공하고 당사가 당사의 독자적/합리적 재량에 따라 수락한 것이 될
        수도 있습니다. 당사는 당사의 독자적/절대적 재량에 따라 언제든지 사유 제공 또는 사전 통지 없이 보안 자격
        증명을 무효화할 수 있으며, 보안 자격 증명 무효화로 인하여 이용자가 입은 손해나 무효화로 인하여 야기되거나
        발생한 손해, 또는 무효화와 관련되거나 무효화로 인한 손해 일체에 대하여 책임을 부담하지 않습니다. 이용자는
        수시로 암호의 변경을 요청 받을 수 있으며, 본 조항에 따라 필요한 경우 암호를 변경하는 것에 동의합니다.
        또한, 이용자는 이용자의 보안 자격 증명의 비밀을 유지하고 이용자 계정의 보안을 스스로 유지하며, 이용자의
        보안 자격 증명의 유출 또는 사용(권한 있는 사용 여부와는 무관함)에 대한 책임을 진다는 사실에 동의합니다.
        이용자는 이용자의 보안 자격 증명이 훼손되거나 권한 없이 사용되었다는 사실을 알게 되거나 이를 의심할 만한
        사유가 있는 경우, 즉시 당사에 이를 통지하여야 합니다.\n\n
        2.3 이용/접속: 이용자는 다음 사항을 인지하고 이에 동의합니다:\n

        (a) (i) 앱, 사이트 및/또는 서비스 접속이나 이용 또는 접속이나 이용으로 보이는 행위;
        또는 (ii) 이용자의 허가를 받았는지 여부와는 무관히 이용자의 계정, 비밀번호,
        보안 자격 증명을 사용하여 이루어진 모든 접속 및/또는 이용.
    </string>


    <string name="privacy_policy_title">개인정보 처리방침</string>
    <string name="privacy_policy_date">기준 2024년 08월 07일</string>
    <string name="privacy_policy_text">
        세이브더뚝 주식회사(이하 "회사"라 합니다)는 정보주체(이하 "회원"이라 합니다)의 자유와 권리 보호를
        위해 「개인정보 보호법」 및 관계 법령이 정한 바를 준수하여 적법하게 개인정보를 처리하고 안전하게 관리하고
        있습니다. 이에 「개인정보 보호법」 제30조에 따라 개인정보를 보호하고 이와 관련된 고충을 신속하고 원활하게
        처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다. 회사는 개인정보처리방침을
        개정하는 경우 앱 공지사항(또는 개별공지)을 통하여 공지할 것입니다.\n\n
        본 정책은 2024년 08월 07일 (수요일)부터 적용됩니다.
    </string>
    <string name="privacy_policy_section_1_title">제1조 (개인정보의 수집 및 이용목적)</string>
    <string name="privacy_policy_section_1_text">
        회사는 개인정보를 회원관리, 서비스 개발·제공 및 향상, 안전한 모바일 이용환경 등 다음의 목적을 위하여
        수집하고 처리합니다. 처리한 개인정보는 다음의 목적 이외의 용도로는 사용되지 않으며 이용 목적이 변경될
        시에는 「개인정보 보호법」에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.\n\n
        a. 회원 가입 의사의 확인, 이용자 식별, 서비스의 부정 이용 방지와 비인가 사용 방지, 회원 가입 및 가입
        횟수 제한, 연령 확인, 불만 처리 등 회원관리를 위하여 개인정보를 이용합니다.\n
        b. 서비스제공에 더하여, 인구통계학적 분석, 서비스 방문 및 이용기록의 분석 등 신규서비스 요소의 발굴 및
        기존 서비스 개선 등을 위하여 개인정보를 이용합니다.\n
        c. 법령 및 회사의 서비스 이용약관을 위반하는 회원에 대한 이용 제한 조치, 부정 이용 행위를 포함하여
        서비스의 원활한 운영에 지장을 주는 행위에 대한 방지 및 제재, 계정도용 및 부정거래 방지, 약관 개정 등의
        고지사항 전달, 분쟁조정을 위한 기록 보존, 민원처리 등 이용자 보호 및 서비스 운영을 위하여 개인정보를
        이용합니다.\n
        d. 유료 서비스 제공에 따르는 본인인증, 구매 및 요금 결제 등을 위하여 개인정보를 이용합니다.\n
        e. 이벤트 정보 및 참여기회 제공, 광고성 제공 정보 등 마케팅 및 프로모션 목적으로 개인정보를 이용합니다.\n
        f. 서비스 이용기록과 접속 빈도 분석, 서비스 이용에 대한 통계, 서비스 분석 및 통계에 따른 맞춤형 서비스
        제공 등에 개인정보를 이용합니다.
    </string>


    <string name="insurance_policy_title">안전은 우리 일의 최전선에 위치합니다.</string>
    <string name="insurance_policy_subtitle">세이브 더 뚝은 운영 중인 모든 도시에서 라이더 보험을 제공합니다. 추가 비용 없이 제공되는 업계 최고의 보험은 라이더를 더욱 안전하게 보호합니다.</string>
    <string name="insurance_policy_step_1_title">안전 지역으로 이동</string>
    <string name="insurance_policy_step_1_text">본인이나 관련된 다른 사람을 위험으로부터 멀리 대피시키세요.</string>
    <string name="insurance_policy_step_2_title">문의하여 도움 받기</string>
    <string name="insurance_policy_step_2_text">필요한 경우 응급 또는 의료 서비스를 받으세요.</string>
    <string name="insurance_policy_step_3_title">연락처 교환</string>
    <string name="insurance_policy_step_3_text">관련자에게 연락처 정보를 요청하고 공유합니다.</string>
    <string name="insurance_policy_step_4_title">세부 정보 기록</string>
    <string name="insurance_policy_step_4_text">사고, 차량 코드 및 위치의 사진을 찍습니다.</string>
    <string name="insurance_policy_step_5_title">사고 신고</string>
    <string name="insurance_policy_step_5_text">세이브 더 뚝과 관련된 사고를 당사에 신고하세요.</string>
    <string name="insurance_policy_step_6_title">라이더 클레임 제출</string>
    <string name="insurance_policy_step_6_text">보험금 청구에 필요한 서류를 제출하는 라이더</string>
    <string name="insurance_policy_contact_title">사건이나 차량을 세이브 더 뚝에 신고하려면 아래 연락처로 문의하시기 바랍니다.</string>
    <string name="insurance_policy_contact_subtitle">궁금한 점이 있으시면 언제든지 문의해 주세요!
        \n010-2024-0807</string>

    <string-array name="sort_options">
        <item>거리 가까운 순</item>
        <item>재고 적은 순</item>
        <item>재고 많은 순</item>
    </string-array>



</resources>